muchos cambios en clase juego